2003-01-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: remove use of nested $(PACKAGE) to enable building
	on older, cruftier make versions

	* doc/tkTable.n:        add -ellipsis tag /global option which
	* tests/tkTable.test:   takes a char string (ie: "...") to display
	* generic/tkTableTag.c: as an ellipsis.  These will only be shown
	* generic/tkTable.h:    on non-wrapping, non-multiline cells.
	* generic/tkTable.c: 

2002-12-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/tkTable.test:
	* generic/tkTableCell.c (TableGetCellValue): make caching allows
	NULLs throughout to save mem.
	Do not call Tcl_FreeResult as it will be freed before the next
	result is set, and causes us to lose large results. [Bug #651685]

2002-10-16  Jeff Hobbs  <jeffh@ActiveState.com>

	**** 2.8 TAGGED FOR RELEASE ****

	* Makefile.in: updated dist target to get changed fileset.

	* generic/tkTableEdit.c (Table_EditCmd): Ensure that embedded
	widgets being moved offscreen get unmapped. [Bug #551325]

	* generic/tkTableCell.c (TableAtBorder): refine border detection
	in the midst of spanned cells. [Patch #544117] (duxbury)

	* doc/tkTable.n:
	* doc/tkTable.html:
	* tests/tkTable.test:
	* generic/tkTable.c: Add global -justify option. [Bug #623557]

	* generic/tkTableTag.c: more CONST84 casting fixes.
	Allowing setting of tag relief to "". [Bug #233619]

	* generic/tkTable.h:
	* generic/tkTableUtil.c: 
	* generic/tkTableWin.c: more CONST84 casting fixes.

	* library/tkTable.tcl: Add <FocusOut> as a default auto-commit
	event. [Bug #611132]
	(::tk::table::Motion): abort "extended" arm if the anchor cell
	isn't defined. [Bug #604470]

2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4:
	* configure:
	* configure.in: move the CFLAGS definition into TEA_MAKE_LIB
	and make it pick up the env CFLAGS at configure time.

2002-10-15  Andreas Kupries  <andreask@pliers.activestate.com>

	* configure.in: Changed to propagate an initial CFLAGS value to